samples/_failures_safe/1761189753_6fa44a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a87a54ad.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_a87a54ad.c:169:16: error: expected ‘;’ at end of input
  169 |     parser_init
      |                ^
      |                ;
./samples/SAFE/__tmp_a87a54ad.c:169:5: error: expected declaration or statement at end of input
  169 |     parser_init
      |     ^~~~~~~~~~~
